--- a/src/app/components/tasks-item/tasks-item.component.html
+++ b/src/app/components/tasks-item/tasks-item.component.html
@@ -1,3 +1,8 @@
 <div class="task">
-    <h3>{{task.text}}</h3>
+    <h3>{{task.text}} 
+        <fa-icon 
+            [icon]="faTimes"
+            [ngStyle]="{'color': '#ee5555'}">
+        </fa-icon>
+    </h3>
 </div>
