--- a/src/app/components/tasks-item/tasks-item.component.css
+++ b/src/app/components/tasks-item/tasks-item.component.css
@@ -1,13 +1,15 @@
+body {
+   background: #B3B4C1;
+}
 .task {
-    background-color: rgb(199, 198, 198);
     margin: 10px;
     padding: 10px;
     border-radius: 4px;
     cursor: pointer;
 }
 
-task.reminder {
-    border-left: 5px solid red;
+.task.reminder {
+    border-left: 7px solid rgb(44, 206, 58);
 }
 
 .task h3 {
