--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -5,3 +5,12 @@ header {
     margin-bottom: 20px;
     
 }
+
+.cont {
+    text-align: center;
+    font-size:20px;
+}
+
+.foot {
+    margin-top: 170px;
+}
